--- a/client/src/App.css
+++ b/client/src/App.css
@@ -594,6 +594,7 @@ small {
     border-radius: 10px;
     margin-left: 15rem; 
     margin-right: 15rem;
+    margin-bottom: 17rem ;
   }
 
 .pedido-exitoso a {
