--- a/client/src/App.css
+++ b/client/src/App.css
@@ -518,11 +518,7 @@ small {
   }
   
   .mpago {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 10px;
-    font-size: 1rem;
+    margin-bottom: 2rem;
   }
   
   .alert {
